--- a/README
+++ b/README
@@ -1,5 +1,49 @@
-pod2text lib/ExtUtils/ModuleMaker.pm > README
+ExtUtils::ModuleMaker - Better than h2xs for creating modules
 
-If this is still here it means the programmer was too lazy to create the readme file.
+This document refers to version 0.32_07 of ExtUtils::ModuleMaker.  
+This version was released January 3, 2005.
 
-You can create it now by using the command shown above from this directory.
+To install this module on your system, place the tarball archive file in a 
+temporary directory and call the following:
+
+% gunzip ExtUtils-ModuleMaker-0.32_07.tar.gz
+% tar xf ExtUtils-ModuleMaker-0.32_07.tar
+% cd ExtUtils-ModuleMaker-0.32_07
+% perl Makefile.PL
+% make
+% make test
+% make install
+
+If during installation you wish to view more information on test results, 
+substitute the following for the sixth line in the sequence of commands
+above:
+
+% make test TEST=VERBOSE
+
+If you are installing this module over any earlier version, you may 
+substitute the following for the last line in the sequence of commands 
+above:
+
+% make install UNINST=1
+
+If you are installing this module on a Win32 system with 'nmake', 
+substitute 'nmake' for 'make' in the sequence of commands above.
+
+In sending e-mail to the author, please put "ExtUtils::ModuleMaker" or 
+"ExtUtils-ModuleMaker" in the subject line.
+
+Author:  R. Geoffrey Avery,
+CPAN ID: RGEOFFREY
+modulemaker@PlatypiVentures.com
+http://www.PlatypiVentures.com/perl/modules/ModuleMaker.shtml
+
+Version 0.32_07 is an unofficial version containing revisions made by 
+James E. Keenan (jkeenan@cpan.org) on January 3, 2005.
+
+Copyright (c) 2001-2002 R. Geoffrey Avery. All rights reserved.
+This program is free software; you can redistribute
+it and/or modify it under the same terms as Perl itself.
+
+The full text of the license can be found in the
+LICENSE file included with this module.
+
