Rolled back new() to accept a list of key-value pairs -- not a hashref. This was done once I discovered that there is at least one other CPAN module which depends on EU::MM.  Had to change all tests as well as modulemaker.  Began to test modulemaker in t/08, which I added to MANIFEST.  Did some cursory edits in Changes.

--- a/Changes
+++ b/Changes
@@ -6,7 +6,9 @@ Revision history for Perl extension ExtUtils::ModuleMaker.
 0.32_06 December 18 2004
 	- Further cleanup by James E Keenan:
 	    - Eliminate causes of warnings while using 'modulemaker' utility
-	    - Change to ExtUtils::ModuleMaker::new():  Instead of passing a hash-like list, pass a reference to an anonymous hash, i.e., enclose list of arguments inside {}
+	    - Change to ExtUtils::ModuleMaker::new():  Instead of
+	      passing a hash-like list, pass a reference to an anonymous
+hash, i.e., enclose list of arguments inside {} (CANCELLED in 0.33)
 
 0.32_05 December 1 2004
 	- Further cleanup by James E Keenan:
