Added tests to t/11 for NEED_POD and NEED_NEW_METHOD options.  Added note to Todo observing that I can't specify NEED_NEW_METHOD => 0 from the command-line.

--- a/Todo
+++ b/Todo
@@ -157,3 +157,7 @@ of ModuleMaker.pm:  my $page = $self->block_begin($module) etc.  I'm
 going to try to refactor this line, as I don't know where precisely the
 warning is coming from.
 
+2.  Just noticed that modulemaker has no command-line option to specify
+no new() method in module.
+
+
