--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 ExtUtils::ModuleMaker - Better than h2xs for creating modules
 
-This document refers to version 0.34 of ExtUtils::ModuleMaker.  
-This version was released July 12, 2005.
+This document refers to version 0.35 of ExtUtils::ModuleMaker.  
+This version was released July 17, 2005.
 
 To install this module on your system, place the tarball archive file in a 
 temporary directory and call the following:
 
-% gunzip ExtUtils-ModuleMaker-0.34.tar.gz
-% tar xf ExtUtils-ModuleMaker-0.34.tar
-% cd ExtUtils-ModuleMaker-0.34
+% gunzip ExtUtils-ModuleMaker-0.35.tar.gz
+% tar xf ExtUtils-ModuleMaker-0.35.tar
+% cd ExtUtils-ModuleMaker-0.35
 % perl Makefile.PL
 % make
 % make test
@@ -29,19 +29,20 @@ above:
 If you are installing this module on a Win32 system with 'nmake', 
 substitute 'nmake' for 'make' in the sequence of commands above.
 
-In sending e-mail to the author, please put "ExtUtils::ModuleMaker" or 
-"ExtUtils-ModuleMaker" in the subject line.
+In sending e-mail to the maintainer, please put "ExtUtils::ModuleMaker", 
+"ExtUtils-ModuleMaker" or "modulemaker" in the subject line.
 
 Original author:  R. Geoffrey Avery
 CPAN ID: RGEOFFREY
 modulemaker@PlatypiVentures.com
 http://www.PlatypiVentures.com/perl/modules/ModuleMaker.shtml
 
-Maintainer since version 0.34: James E. Keenan
+Maintainer since version 0.33: James E. Keenan
 CPAN ID:  JKEENAN
 jkeenan@cpan.org
 
-Copyright (c) 2001-2002 R. Geoffrey Avery. All rights reserved.
+Copyright (c) 2001-2002 R. Geoffrey Avery.
+Revisions from v0.33 forward (c) 2005 James E. Keenan.  All rights reserved.
 This program is free software; you can redistribute
 it and/or modify it under the same terms as Perl itself.
 
