--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@ Revision history for Perl extension ExtUtils::ModuleMaker.
 lib/ExtUtils/ModuleMaker/Defaults.pm.
         - Created sub failsafe() as testing subroutine for
           t/02_bad_constructor.t.
+        - Corrected one misspecified test in t/03_quick.t.
 
 0.36 July 18, 2005
         - Corrected error pointed out by CPAN tester Scott R. Godin:
