--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 ExtUtils::ModuleMaker - Better than h2xs for creating modules
 
-This document refers to version 0.36_07 of ExtUtils::ModuleMaker.  
-This version was released August 19, 2005.
+This document refers to version 0.36_08 of ExtUtils::ModuleMaker.  
+his version was released August 20, 2005.
 
 To install this module on your system, place the tarball archive file in a 
 temporary directory and call the following:
 
-% gunzip ExtUtils-ModuleMaker-0.36_07.tar.gz
-% tar xf ExtUtils-ModuleMaker-0.36_07.tar
-% cd ExtUtils-ModuleMaker-0.36_07
+% gunzip ExtUtils-ModuleMaker-0.36_08.tar.gz
+% tar xf ExtUtils-ModuleMaker-0.36_08.tar
+% cd ExtUtils-ModuleMaker-0.36_08
 % perl Makefile.PL
 % make
 % make test
