--- a/Todo
+++ b/Todo
@@ -171,4 +171,21 @@ no new() method in module. DONE.
 --
 23 July 2005
 
+--
+24 August 2005
+
+I'm close to a solution to the testing problem.  Having installed
+Defaults::Identify and written script dpd.pl, I can now quickly test whether a
+Personal::Defaults is currently installed in the proper place on the system.
+By renaming that file with an extension like .notyet or .hidden, I can run
+tests of EU::MM and modulemaker both WITH and WITHOUT Personal::Defaults
+installed.  To run those tests, I will have to write a subroutine which,
+borrowing from the OS-specific code in the constructor, tests for the
+presence/absence of Personal::Defaults before each constructor call, then
+hides or reveals that module appropriately while diverting the testing suite
+to Testing::Defaults, then calls the constructor and
+runs the tests needed, then restores the status quo ante.
+
+At that point, I will be ready to begin work on saving defaults entered at the
+modulemaker prompts as a new Personal::Defaults.
 
