Upped version number to 0.36_11.  In t/03, 04, 05, 06, 07, 11, 12, 13, added the tests which protect any already existing personal defaults directory.  Alex Gill reported problem in t/18, which was ultimately traced to fail to account for the possibility that, when a user goes to install EU::MM for the first time, he lacks a .modulemaker directory standing above the personal defaults directory.  This led me to refactor code in Utility.pm, thereby creating _get_home_directory().  Added additional tests in t/01 to make sure we do the right thing when no .modulemaker directory already exists under the home directory.

--- a/Todo
+++ b/Todo
@@ -13,3 +13,7 @@ file.  So, other than my own idiosyncratic testing, the interactive mode is
 untested.
 
 2.  Ways to easily subclass StandardText.
+
+OUCH!  Now that I have *my* own personal defaults file installed, I'm getting
+failing test results in t/03 ('cause I prefer COMPACT => 1).  So I have to fix
+all tests to temporarily suppress any existing personal defaults file.
