--- a/Changes
+++ b/Changes
@@ -12,6 +12,11 @@ that the user's system status is ultimately unchanged.  This required
 modification of every test file and (for t/02 and t/13) two subroutines in
 t/testlib/Auxiliary.pm, as well as to calls to
 _get_personal_defaults_directory in ModuleMaker.pm.
+    - Extensive work cleaning up internals of StandardText.pm.  Hashes that
+      were external to methods brought back inside.  Methods decomposed into
+finer parts for more fine-grained replaceability.  Many variables and methods
+renamed for clarity.  Closing off 0.36_13 so that next version reflects
+attempts to be able to subclass StandardText.
 
 0.3612 August 28, 2005
     - Alex Gill continued to report problems with t/06, t/07 and t/18.  He
