--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 ExtUtils::ModuleMaker - Better than h2xs for creating modules
 
-This document refers to version 0.36_17 of ExtUtils::ModuleMaker.  
-his version was released September 2, 2005.
+This document refers to version 0.37 of ExtUtils::ModuleMaker.  
+his version was released September 3, 2005.
 
 To install this module on your system, place the tarball archive file in a 
 temporary directory and call the following:
 
-% gunzip ExtUtils-ModuleMaker-0.36_17.tar.gz
-% tar xf ExtUtils-ModuleMaker-0.36_17.tar
-% cd ExtUtils-ModuleMaker-0.36_17
+% gunzip ExtUtils-ModuleMaker-0.37.tar.gz
+% tar xf ExtUtils-ModuleMaker-0.37.tar
+% cd ExtUtils-ModuleMaker-0.37
 % perl Makefile.PL
 % make
 % make test
