--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 ExtUtils::ModuleMaker - Better than h2xs for creating modules
 
-This document refers to version 0.38 of ExtUtils::ModuleMaker.  
+This document refers to version 0.38_01 of ExtUtils::ModuleMaker.  
 his version was released September 4, 2005.
 
 To install this module on your system, place the tarball archive file in a 
 temporary directory and call the following:
 
-% gunzip ExtUtils-ModuleMaker-0.38.tar.gz
-% tar xf ExtUtils-ModuleMaker-0.38.tar
-% cd ExtUtils-ModuleMaker-0.38
+% gunzip ExtUtils-ModuleMaker-0.38_01.tar.gz
+% tar xf ExtUtils-ModuleMaker-0.38_01.tar
+% cd ExtUtils-ModuleMaker-0.38_01
 % perl Makefile.PL
 % make
 % make test
